# dnd_app_inventory_service

./: .gitignore  Cargo.toml  Makefile
src/: inventory_item_service.rs  inventory_service.rs  inventory_with_items_service.rs  main.rs  pagination_service.rs  query_engine.rs  user_service.rs
src/db/: db_v1.rs  db_v3.rs  mod.rs
src/graphql/resolvers/: inventory_item_resolver.rs  inventory_resolver.rs  inventory_with_items_resolver.rs  item_resolver.rs  mod.rs  root_resolver.rs
src/graphql/schemas/: inventory_item_schema.rs  inventory_schema.rs  inventory_with_items_schema.rs  item_schema.rs  mod.rs  paginated_response_schema.rs  trait_schema.rs
src/models/: inventory_item_model.rs  inventory_model.rs  inventory_with_items_model.rs  item_model.rs  mod.rs
