[package]
name = "rust-inventory-db"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
axum = "0.7.5"
dotenv = "0.15.0"
neo4rs = "0.7.1"
serde = "1.0.200"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
